ocaml/minocaml4/minParser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : signature EOF

   3  toplevel_phrase : top_structure SEMISEMI
   4                  | EOF

   5  top_structure : seq_expr
   6                | top_structure_tail

   7  top_structure_tail :
   8                     | structure_item top_structure_tail

   9  use_file : use_file_tail
  10           | seq_expr use_file_tail

  11  use_file_tail : EOF
  12                | SEMISEMI EOF
  13                | SEMISEMI seq_expr use_file_tail
  14                | SEMISEMI structure_item use_file_tail
  15                | structure_item use_file_tail

  16  parse_core_type : core_type EOF

  17  parse_expression : seq_expr EOF

  18  parse_pattern : pattern EOF

  19  structure : seq_expr structure_tail
  20            | structure_tail

  21  structure_tail :
  22                 | SEMISEMI structure
  23                 | structure_item structure_tail

  24  structure_item : LET rec_flag let_bindings
  25                 | open_statement

  26  signature :
  27            | SEMISEMI signature
  28            | signature_item signature

  29  signature_item : VAL val_ident COLON core_type
  30                 | open_statement

  31  open_statement : OPEN mod_longident

  32  seq_expr : expr
  33           | expr SEMI
  34           | expr SEMI seq_expr

  35  labeled_simple_pattern : LABEL simple_pattern
  36                         | simple_pattern

  37  expr : simple_expr
  38       | simple_expr simple_labeled_expr_list
  39       | LET rec_flag let_bindings_no_attrs IN seq_expr
  40       | FUNCTION opt_bar match_cases
  41       | FUN labeled_simple_pattern fun_def
  42       | MATCH seq_expr WITH opt_bar match_cases
  43       | TRY seq_expr WITH opt_bar match_cases
  44       | expr_comma_list
  45       | constr_longident simple_expr
  46       | IF seq_expr THEN expr ELSE expr
  47       | IF seq_expr THEN expr
  48       | expr INFIXOP0 expr
  49       | expr INFIXOP1 expr
  50       | expr INFIXOP2 expr
  51       | expr INFIXOP3 expr
  52       | expr INFIXOP4 expr
  53       | expr PLUS expr
  54       | expr PLUSDOT expr
  55       | expr PLUSEQ expr
  56       | expr MINUS expr
  57       | expr MINUSDOT expr
  58       | expr STAR expr
  59       | expr PERCENT expr
  60       | expr EQUAL expr
  61       | expr LESS expr
  62       | expr GREATER expr
  63       | expr OR expr
  64       | expr BARBAR expr
  65       | expr AMPERSAND expr
  66       | expr AMPERAMPER expr
  67       | expr COLONEQUAL expr
  68       | subtractive expr
  69       | additive expr
  70       | simple_expr DOT label_longident LESSMINUS expr
  71       | simple_expr DOT LPAREN seq_expr RPAREN LESSMINUS expr
  72       | label LESSMINUS expr
  73       | ASSERT simple_expr

  74  simple_expr : val_longident
  75              | constant
  76              | constr_longident
  77              | LPAREN seq_expr RPAREN
  78              | BEGIN seq_expr END
  79              | BEGIN END
  80              | LPAREN seq_expr type_constraint RPAREN
  81              | simple_expr DOT label_longident
  82              | mod_longident DOT LPAREN seq_expr RPAREN
  83              | simple_expr DOT LPAREN seq_expr RPAREN
  84              | PREFIXOP simple_expr
  85              | BANG simple_expr

  86  simple_labeled_expr_list : labeled_simple_expr
  87                           | simple_labeled_expr_list labeled_simple_expr

  88  labeled_simple_expr : simple_expr
  89                      | label_expr

  90  label_expr : LABEL simple_expr
  91             | TILDE label_ident

  92  label_ident : LIDENT

  93  let_bindings : let_binding
  94               | let_bindings AND let_binding

  95  let_bindings_no_attrs : let_bindings

  96  let_binding : let_binding_

  97  let_binding_ : val_ident fun_binding
  98               | pattern EQUAL seq_expr
  99               | simple_pattern_not_ident COLON core_type EQUAL seq_expr

 100  fun_binding : strict_binding
 101              | type_constraint EQUAL seq_expr

 102  strict_binding : EQUAL seq_expr
 103                 | labeled_simple_pattern fun_binding

 104  match_cases : match_case
 105              | match_cases BAR match_case

 106  match_case : pattern MINUSGREATER seq_expr
 107             | pattern WHEN seq_expr MINUSGREATER seq_expr

 108  fun_def : MINUSGREATER seq_expr
 109          | labeled_simple_pattern fun_def

 110  expr_comma_list : expr_comma_list COMMA expr
 111                  | expr COMMA expr

 112  lbl_expr_list : lbl_expr
 113                | lbl_expr SEMI lbl_expr_list
 114                | lbl_expr SEMI

 115  lbl_expr : label_longident EQUAL expr
 116           | label_longident

 117  type_constraint : COLON core_type
 118                  | COLON core_type COLONGREATER core_type
 119                  | COLONGREATER core_type

 120  pattern : simple_pattern
 121          | pattern AS val_ident
 122          | pattern_comma_list
 123          | constr_longident pattern
 124          | pattern BAR pattern
 125          | EXCEPTION pattern

 126  simple_pattern : val_ident
 127                 | simple_pattern_not_ident

 128  simple_pattern_not_ident : UNDERSCORE
 129                           | signed_constant
 130                           | signed_constant DOTDOT signed_constant
 131                           | constr_longident
 132                           | LPAREN pattern RPAREN
 133                           | LPAREN pattern COLON core_type RPAREN

 134  pattern_comma_list : pattern_comma_list COMMA pattern
 135                     | pattern COMMA pattern

 136  lbl_pattern_list : lbl_pattern
 137                   | lbl_pattern SEMI
 138                   | lbl_pattern SEMI UNDERSCORE opt_semi
 139                   | lbl_pattern SEMI lbl_pattern_list

 140  lbl_pattern : label_longident EQUAL pattern
 141              | label_longident

 142  core_type : core_type2

 143  core_type2 : simple_core_type_or_tuple
 144             | LIDENT COLON core_type2 MINUSGREATER core_type2
 145             | core_type2 MINUSGREATER core_type2

 146  simple_core_type : simple_core_type2
 147                   | LPAREN core_type_comma_list RPAREN

 148  simple_core_type2 : UNDERSCORE
 149                    | type_longident
 150                    | simple_core_type2 type_longident
 151                    | LPAREN core_type_comma_list RPAREN type_longident

 152  simple_core_type_or_tuple : simple_core_type
 153                            | simple_core_type STAR core_type_list

 154  core_type_comma_list : core_type
 155                       | core_type_comma_list COMMA core_type

 156  core_type_list : simple_core_type
 157                 | core_type_list STAR simple_core_type

 158  label : LIDENT

 159  constant : INT
 160           | CHAR
 161           | STRING
 162           | FLOAT

 163  signed_constant : constant
 164                  | MINUS INT
 165                  | MINUS FLOAT
 166                  | PLUS INT
 167                  | PLUS FLOAT

 168  val_ident : LIDENT

 169  val_longident : val_ident
 170                | mod_longident DOT val_ident

 171  constr_longident : mod_longident
 172                   | LPAREN RPAREN
 173                   | FALSE
 174                   | TRUE

 175  label_longident : LIDENT
 176                  | mod_longident DOT LIDENT

 177  type_longident : LIDENT
 178                 | mod_ext_longident DOT LIDENT

 179  mod_longident : UIDENT
 180                | mod_longident DOT UIDENT

 181  mod_ext_longident : UIDENT
 182                    | mod_ext_longident DOT UIDENT
 183                    | mod_ext_longident LPAREN mod_ext_longident RPAREN

 184  rec_flag :
 185           | REC

 186  opt_bar :
 187          | BAR

 188  opt_semi :
 189           | SEMI

 190  subtractive : MINUS
 191              | MINUSDOT

 192  additive : PLUS
 193           | PLUSDOT

 194  %entry% : '\001' implementation
 195          | '\002' interface
 196          | '\003' toplevel_phrase
 197          | '\004' use_file
 198          | '\005' parse_core_type
 199          | '\006' parse_expression
 200          | '\007' parse_pattern

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	'\006'  shift 6
	'\007'  shift 7
	.  error

	%entry%  goto 8


state 1
	%entry% : '\001' . implementation  (194)
	structure_tail : .  (21)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 19
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	OPEN  shift 25
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	SEMISEMI  shift 29
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	EOF  reduce 21

	implementation  goto 34
	structure  goto 35
	seq_expr  goto 36
	structure_item  goto 37
	structure_tail  goto 38
	open_statement  goto 39
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 2
	%entry% : '\002' . interface  (195)
	signature : .  (26)

	OPEN  shift 25
	SEMISEMI  shift 51
	VAL  shift 52
	EOF  reduce 26

	interface  goto 53
	signature  goto 54
	open_statement  goto 55
	signature_item  goto 56


state 3
	%entry% : '\003' . toplevel_phrase  (196)
	top_structure_tail : .  (7)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	EOF  shift 57
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 19
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	OPEN  shift 25
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	SEMISEMI  reduce 7

	toplevel_phrase  goto 58
	top_structure  goto 59
	seq_expr  goto 60
	top_structure_tail  goto 61
	structure_item  goto 62
	open_statement  goto 39
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 4
	%entry% : '\004' . use_file  (197)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	EOF  shift 63
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 19
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	OPEN  shift 25
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	SEMISEMI  shift 64
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	.  error

	use_file  goto 65
	seq_expr  goto 66
	structure_item  goto 67
	use_file_tail  goto 68
	open_statement  goto 39
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 5
	%entry% : '\005' . parse_core_type  (198)

	LIDENT  shift 69
	LPAREN  shift 70
	UIDENT  shift 71
	UNDERSCORE  shift 72
	.  error

	parse_core_type  goto 73
	core_type  goto 74
	core_type2  goto 75
	simple_core_type_or_tuple  goto 76
	simple_core_type  goto 77
	simple_core_type2  goto 78
	type_longident  goto 79
	mod_ext_longident  goto 80


state 6
	%entry% : '\006' . parse_expression  (199)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 81
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	.  error

	parse_expression  goto 82
	seq_expr  goto 83
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 7
	%entry% : '\007' . parse_pattern  (200)

	CHAR  shift 12
	EXCEPTION  shift 84
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LIDENT  shift 85
	LPAREN  shift 86
	MINUS  shift 87
	PLUS  shift 88
	STRING  shift 30
	TRUE  shift 31
	UIDENT  shift 33
	UNDERSCORE  shift 89
	.  error

	parse_pattern  goto 90
	pattern  goto 91
	val_ident  goto 92
	mod_longident  goto 93
	simple_pattern  goto 94
	constr_longident  goto 95
	constant  goto 96
	simple_pattern_not_ident  goto 97
	pattern_comma_list  goto 98
	signed_constant  goto 99


state 8
	$accept : %entry% . $end  (0)

	$end  accept


state 9
	expr : ASSERT . simple_expr  (73)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LIDENT  shift 85
	LPAREN  shift 21
	PREFIXOP  shift 28
	STRING  shift 30
	TRUE  shift 31
	UIDENT  shift 33
	.  error

	val_ident  goto 40
	mod_longident  goto 41
	simple_expr  goto 100
	constr_longident  goto 101
	val_longident  goto 49
	constant  goto 50


state 10
	simple_expr : BANG . simple_expr  (85)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LIDENT  shift 85
	LPAREN  shift 21
	PREFIXOP  shift 28
	STRING  shift 30
	TRUE  shift 31
	UIDENT  shift 33
	.  error

	val_ident  goto 40
	mod_longident  goto 41
	simple_expr  goto 102
	constr_longident  goto 101
	val_longident  goto 49
	constant  goto 50


state 11
	simple_expr : BEGIN . seq_expr END  (78)
	simple_expr : BEGIN . END  (79)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	END  shift 103
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 81
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	.  error

	seq_expr  goto 104
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 12
	constant : CHAR .  (160)

	.  reduce 160


state 13
	constr_longident : FALSE .  (173)

	.  reduce 173


state 14
	constant : FLOAT .  (162)

	.  reduce 162


state 15
	expr : FUN . labeled_simple_pattern fun_def  (41)

	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LABEL  shift 105
	LIDENT  shift 85
	LPAREN  shift 86
	MINUS  shift 87
	PLUS  shift 88
	STRING  shift 30
	TRUE  shift 31
	UIDENT  shift 33
	UNDERSCORE  shift 89
	.  error

	val_ident  goto 92
	mod_longident  goto 93
	labeled_simple_pattern  goto 106
	simple_pattern  goto 107
	constr_longident  goto 108
	constant  goto 96
	simple_pattern_not_ident  goto 97
	signed_constant  goto 99


state 16
	expr : FUNCTION . opt_bar match_cases  (40)
	opt_bar : .  (186)

	BAR  shift 109
	CHAR  reduce 186
	EXCEPTION  reduce 186
	FALSE  reduce 186
	FLOAT  reduce 186
	INT  reduce 186
	LIDENT  reduce 186
	LPAREN  reduce 186
	MINUS  reduce 186
	PLUS  reduce 186
	STRING  reduce 186
	TRUE  reduce 186
	UIDENT  reduce 186
	UNDERSCORE  reduce 186

	opt_bar  goto 110


state 17
	expr : IF . seq_expr THEN expr ELSE expr  (46)
	expr : IF . seq_expr THEN expr  (47)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 81
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	.  error

	seq_expr  goto 111
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 18
	constant : INT .  (159)

	.  reduce 159


state 19
	structure_item : LET . rec_flag let_bindings  (24)
	expr : LET . rec_flag let_bindings_no_attrs IN seq_expr  (39)
	rec_flag : .  (184)

	REC  shift 112
	CHAR  reduce 184
	EXCEPTION  reduce 184
	FALSE  reduce 184
	FLOAT  reduce 184
	INT  reduce 184
	LIDENT  reduce 184
	LPAREN  reduce 184
	MINUS  reduce 184
	PLUS  reduce 184
	STRING  reduce 184
	TRUE  reduce 184
	UIDENT  reduce 184
	UNDERSCORE  reduce 184

	rec_flag  goto 113


state 20
	label : LIDENT .  (158)
	val_ident : LIDENT .  (168)

	AMPERAMPER  reduce 168
	AMPERSAND  reduce 168
	AND  reduce 168
	BANG  reduce 168
	BAR  reduce 168
	BARBAR  reduce 168
	BEGIN  reduce 168
	CHAR  reduce 168
	COLON  reduce 168
	COLONEQUAL  reduce 168
	COLONGREATER  reduce 168
	COMMA  reduce 168
	DOT  reduce 168
	ELSE  reduce 168
	END  reduce 168
	EOF  reduce 168
	EQUAL  reduce 168
	FALSE  reduce 168
	FLOAT  reduce 168
	GREATER  reduce 168
	IN  reduce 168
	INFIXOP0  reduce 168
	INFIXOP1  reduce 168
	INFIXOP2  reduce 168
	INFIXOP3  reduce 168
	INFIXOP4  reduce 168
	INT  reduce 168
	LABEL  reduce 168
	LESS  reduce 168
	LESSMINUS  reduce 158
	LET  reduce 168
	LIDENT  reduce 168
	LPAREN  reduce 168
	MINUS  reduce 168
	MINUSDOT  reduce 168
	MINUSGREATER  reduce 168
	OPEN  reduce 168
	OR  reduce 168
	PERCENT  reduce 168
	PLUS  reduce 168
	PLUSDOT  reduce 168
	PLUSEQ  reduce 168
	PREFIXOP  reduce 168
	RPAREN  reduce 168
	SEMI  reduce 168
	SEMISEMI  reduce 168
	STAR  reduce 168
	STRING  reduce 168
	THEN  reduce 168
	TILDE  reduce 168
	TRUE  reduce 168
	UIDENT  reduce 168
	WITH  reduce 168


state 21
	simple_expr : LPAREN . seq_expr RPAREN  (77)
	simple_expr : LPAREN . seq_expr type_constraint RPAREN  (80)
	constr_longident : LPAREN . RPAREN  (172)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 81
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	RPAREN  shift 114
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	.  error

	seq_expr  goto 115
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 22
	expr : MATCH . seq_expr WITH opt_bar match_cases  (42)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 81
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	.  error

	seq_expr  goto 116
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 23
	subtractive : MINUS .  (190)

	.  reduce 190


state 24
	subtractive : MINUSDOT .  (191)

	.  reduce 191


state 25
	open_statement : OPEN . mod_longident  (31)

	UIDENT  shift 33
	.  error

	mod_longident  goto 117


state 26
	additive : PLUS .  (192)

	.  reduce 192


state 27
	additive : PLUSDOT .  (193)

	.  reduce 193


state 28
	simple_expr : PREFIXOP . simple_expr  (84)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LIDENT  shift 85
	LPAREN  shift 21
	PREFIXOP  shift 28
	STRING  shift 30
	TRUE  shift 31
	UIDENT  shift 33
	.  error

	val_ident  goto 40
	mod_longident  goto 41
	simple_expr  goto 118
	constr_longident  goto 101
	val_longident  goto 49
	constant  goto 50


state 29
	structure_tail : SEMISEMI . structure  (22)
	structure_tail : .  (21)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 19
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	OPEN  shift 25
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	SEMISEMI  shift 29
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	EOF  reduce 21

	structure  goto 119
	seq_expr  goto 36
	structure_item  goto 37
	structure_tail  goto 38
	open_statement  goto 39
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 30
	constant : STRING .  (161)

	.  reduce 161


state 31
	constr_longident : TRUE .  (174)

	.  reduce 174


state 32
	expr : TRY . seq_expr WITH opt_bar match_cases  (43)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LET  shift 81
	LIDENT  shift 20
	LPAREN  shift 21
	MATCH  shift 22
	MINUS  shift 23
	MINUSDOT  shift 24
	PLUS  shift 26
	PLUSDOT  shift 27
	PREFIXOP  shift 28
	STRING  shift 30
	TRUE  shift 31
	TRY  shift 32
	UIDENT  shift 33
	.  error

	seq_expr  goto 120
	val_ident  goto 40
	mod_longident  goto 41
	expr  goto 42
	simple_expr  goto 43
	expr_comma_list  goto 44
	constr_longident  goto 45
	subtractive  goto 46
	additive  goto 47
	label  goto 48
	val_longident  goto 49
	constant  goto 50


state 33
	mod_longident : UIDENT .  (179)

	.  reduce 179


state 34
	%entry% : '\001' implementation .  (194)

	.  reduce 194


state 35
	implementation : structure . EOF  (1)

	EOF  shift 121
	.  error


state 36
	structure : seq_expr . structure_tail  (19)
	structure_tail : .  (21)

	LET  shift 122
	OPEN  shift 25
	SEMISEMI  shift 29
	EOF  reduce 21

	structure_item  goto 37
	structure_tail  goto 123
	open_statement  goto 39


state 37
	structure_tail : structure_item . structure_tail  (23)
	structure_tail : .  (21)

	LET  shift 122
	OPEN  shift 25
	SEMISEMI  shift 29
	EOF  reduce 21

	structure_item  goto 37
	structure_tail  goto 124
	open_statement  goto 39


state 38
	structure : structure_tail .  (20)

	.  reduce 20


state 39
	structure_item : open_statement .  (25)

	.  reduce 25


state 40
	val_longident : val_ident .  (169)

	.  reduce 169


state 41
	simple_expr : mod_longident . DOT LPAREN seq_expr RPAREN  (82)
	val_longident : mod_longident . DOT val_ident  (170)
	constr_longident : mod_longident .  (171)
	mod_longident : mod_longident . DOT UIDENT  (180)

	DOT  shift 125
	AMPERAMPER  reduce 171
	AMPERSAND  reduce 171
	AND  reduce 171
	BANG  reduce 171
	BAR  reduce 171
	BARBAR  reduce 171
	BEGIN  reduce 171
	CHAR  reduce 171
	COLON  reduce 171
	COLONEQUAL  reduce 171
	COLONGREATER  reduce 171
	COMMA  reduce 171
	ELSE  reduce 171
	END  reduce 171
	EOF  reduce 171
	EQUAL  reduce 171
	FALSE  reduce 171
	FLOAT  reduce 171
	GREATER  reduce 171
	IN  reduce 171
	INFIXOP0  reduce 171
	INFIXOP1  reduce 171
	INFIXOP2  reduce 171
	INFIXOP3  reduce 171
	INFIXOP4  reduce 171
	INT  reduce 171
	LABEL  reduce 171
	LESS  reduce 171
	LET  reduce 171
	LIDENT  reduce 171
	LPAREN  reduce 171
	MINUS  reduce 171
	MINUSDOT  reduce 171
	MINUSGREATER  reduce 171
	OPEN  reduce 171
	OR  reduce 171
	PERCENT  reduce 171
	PLUS  reduce 171
	PLUSDOT  reduce 171
	PLUSEQ  reduce 171
	PREFIXOP  reduce 171
	RPAREN  reduce 171
	SEMI  reduce 171
	SEMISEMI  reduce 171
	STAR  reduce 171
	STRING  reduce 171
	THEN  reduce 171
	TILDE  reduce 171
	TRUE  reduce 171
	UIDENT  reduce 171
	WITH  reduce 171


state 42
	seq_expr : expr .  (32)
	seq_expr : expr . SEMI  (33)
	seq_expr : expr . SEMI seq_expr  (34)
	expr : expr . INFIXOP0 expr  (48)
	expr : expr . INFIXOP1 expr  (49)
	expr : expr . INFIXOP2 expr  (50)
	expr : expr . INFIXOP3 expr  (51)
	expr : expr . INFIXOP4 expr  (52)
	expr : expr . PLUS expr  (53)
	expr : expr . PLUSDOT expr  (54)
	expr : expr . PLUSEQ expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . MINUSDOT expr  (57)
	expr : expr . STAR expr  (58)
	expr : expr . PERCENT expr  (59)
	expr : expr . EQUAL expr  (60)
	expr : expr . LESS expr  (61)
	expr : expr . GREATER expr  (62)
	expr : expr . OR expr  (63)
	expr : expr . BARBAR expr  (64)
	expr : expr . AMPERSAND expr  (65)
	expr : expr . AMPERAMPER expr  (66)
	expr : expr . COLONEQUAL expr  (67)
	expr_comma_list : expr . COMMA expr  (111)

	AMPERAMPER  shift 126
	AMPERSAND  shift 127
	BARBAR  shift 128
	COLONEQUAL  shift 129
	COMMA  shift 130
	EQUAL  shift 131
	GREATER  shift 132
	INFIXOP0  shift 133
	INFIXOP1  shift 134
	INFIXOP2  shift 135
	INFIXOP3  shift 136
	INFIXOP4  shift 137
	LESS  shift 138
	MINUS  shift 139
	MINUSDOT  shift 140
	OR  shift 141
	PERCENT  shift 142
	PLUS  shift 143
	PLUSDOT  shift 144
	PLUSEQ  shift 145
	SEMI  shift 146
	STAR  shift 147
	AND  reduce 32
	BAR  reduce 32
	COLON  reduce 32
	COLONGREATER  reduce 32
	ELSE  reduce 32
	END  reduce 32
	EOF  reduce 32
	IN  reduce 32
	LET  reduce 32
	MINUSGREATER  reduce 32
	OPEN  reduce 32
	RPAREN  reduce 32
	SEMISEMI  reduce 32
	THEN  reduce 32
	WITH  reduce 32


state 43
	expr : simple_expr .  (37)
	expr : simple_expr . simple_labeled_expr_list  (38)
	expr : simple_expr . DOT label_longident LESSMINUS expr  (70)
	expr : simple_expr . DOT LPAREN seq_expr RPAREN LESSMINUS expr  (71)
	simple_expr : simple_expr . DOT label_longident  (81)
	simple_expr : simple_expr . DOT LPAREN seq_expr RPAREN  (83)
